@@ -60,6 +60,7 @@ From "Set" API:
 =cut
 
 submethod BUILD ($class: *%param is copy ) {
+    # TODO - error message on ignored parameters
     my ( $start, $end );
     my bool $start_is_open;
     my bool $end_is_open;
@@ -219,9 +220,10 @@ method end_is_closed () returns Bool {
     return $.span.end_is_closed;
 }
 
-method density () returns Object {
-    return $.span.density;
-}
+# Removed - this is too specific - it only apply to Span::Int objects
+# method density () returns Object {
+#    return $.span.density;
+# }
 
 method stringify () returns String {
     return $.span.stringify;
@@ -232,27 +234,47 @@ method size () returns Object {
     return $.span.size;
 }
 
-submethod _normalize_parameter ($self: $param ) {
-    my $span0 = $self.span;
-    my $span = $param;
-    if $span.isa( 'Recurrence' ) {
+sub _normalize_parameter ( $self, $param ) {
+    # TODO - reorder these rules or move to the subclasses
+    my $span0 = $self.isa( 'Span' ) ?? $self.span :: $self;
+    my $span1 = $param;
+    # say "normalize ", $span0, $span1;
+    if $span1.isa( 'Recurrence' ) {
         my $result = Span::Num.new( start => -Inf, end => Inf );
-        return $self.new( span => Span::Code.new( recurrence => $param, span => $result ) );
+        return $span0, $self.new( span => Span::Code.new( recurrence => $param, span => $result ) );
     }
-    $span = $span.span if $span.isa( 'Span' );
-    return $span if $span.isa( 'Span::Code' | $span0.ref );
-    if $span.isa( 'Span::Num' | 'Span::Int' ) 
+    $span1 = $span1.span if $span1.isa( 'Span' );
+    return $span0, $span1 if $span1.isa( 'Span::Code' | $span0.ref );
+    if $span1.isa( 'Span::Num' ) 
     {
+        # say "span-num";
+        return $span0, $span1 if $span0.isa( 'Span::Code' );
+        return $span0, $span0.new( :density($span0.density) ) if $span1.is_empty;
         # $span is a span, but it has a different type than $self
-        return $span0.new( start => $span.start, end => $span.end );
+        my $start = $span1.start;
+        my $end =   $span1.end;
+        $start += $span0.density if $start != -Inf && $span1.start_is_open;
+        $end   -= $span0.density if $end   !=  Inf && $span1.end_is_open;
+        my $ret = $span0.new( :start($start), :end($end), :density($span0.density) );
+        # say "returning ", $span0.stringify, ",", $ret.stringify;
+        return $span0, $ret;
+    }
+    if $span1.isa( 'Span::Int' ) 
+    {
+        # say $span1, $span0;
+        #...
+        ($span0, $span1) = _normalize_parameter( $span1, $span0 );
+        # say "returned ", $span0, ",", $span1;
+        return $span0, $span1;
+        # XXX - this doesn't work
+        # return @a.reverse;
     }
     # $span is some kind of scalar
-    return $span0.new( start => $span, end => $span );
+    return $span0, $span0.new( start => $span1, end => $span1 );
 }
 
 method compare ($self: $span is copy) returns int { 
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
     return 0  if $span0.is_empty && $span1.is_empty;
     return -1 if $span0.is_empty;
     return 1  if $span1.is_empty;
@@ -262,8 +284,7 @@ method compare ($self: $span is copy) returns int {
 method contains ($self: $span is copy) returns bool {
     return bool::false if $.span.is_empty;
     
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
     my @union = $span0.union( $span1 );
     
     # XXX this should work
@@ -276,8 +297,7 @@ method contains ($self: $span is copy) returns bool {
 method intersects ($self: $span is copy) returns bool {
     return bool::false if $.span.is_empty;
     
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
     my @union = $span0.union( $span1 );
     
     # XXX - this should work
@@ -287,23 +307,18 @@ method intersects ($self: $span is copy) returns bool {
 }
 
 method union ($self: $span is copy) returns List of Span { 
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
-
-    return $self.new( span => $span1 ) if $self.is_empty;
-
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
+    return $self.new( span => $span1 ) if $span0.is_empty;
+    return $self.new( span => $span0 ) if $span1.is_empty;
     my @union = $span0.union( $span1 );
     return @union.map:{ $self.new( span => $_ ) };
 }
 
 method intersection ($self: $span is copy) returns List of Span {
-    return $self.clone if $self.is_empty;
-    
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
-
+    # return $self.clone if $self.is_empty;
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
     return $self.new( span => $span1 ) if $span1.is_empty;
-
+    return $self.new( span => $span0 ) if $span0.is_empty;
     my @span = $span0.intersection( $span1 );
     return @span.map:{ $self.new( span => $_ ) };
 }
@@ -316,8 +331,8 @@ method complement ($self: ) returns List of Span {
 
 method difference ($self: $span is copy) returns List of Span {
     return $self.clone if $self.is_empty;
-    my $span0 = $self.span;
-    my $span1 = $self._normalize_parameter( $span );
+
+    my ($span0, $span1) = _normalize_parameter( $self, $span );
 
     # XXX - why this doesn't work?
     # say 'diff ' , $span0.stringify, ' to ', $span1.stringify;
@@ -608,15 +623,7 @@ Returns an iterator:
 
 The iterator has `next()`, `previous()`, `current()`, and `reset()` methods.
 
-If the span doesn't have a "density" value, this method emits a warning and returns undef.
-
-- `density()`
-
-Returns the Span "density".
-
-Spans created with `:int` have density `1`.
-
-Continuous spans have density `undef`.
+If the span is "continuous", this method emits a warning and returns undef.
 
 - `span()`
 
